# ml-lab

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
cloud/: Dockerfile.train  launch.py  providers.yaml  setup_remote.sh
registry/: README.md
scripts/: cross_compare.py  new_experiment.py  preflight.py  register_model.py  research_to_wiki.py  sync_wandb.py
src/ml_lab/: __init__.py  cli.py  config_validator.py
tests/: test_config_validator.py  test_cross_compare.py  test_new_experiment.py  test_register_model.py
