[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-lab"
version = "0.1.0"
description = "ML research control plane — experiment lifecycle, model registry, cloud training launcher"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Tremayne Timms"}]
keywords = ["ml", "experiment", "training", "model-registry", "cloud-training"]

dependencies = [
    "PyYAML>=6.0,<7.0",
    "click>=8.0,<9.0",
    "rich>=13.0,<15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<10.0",
    "pytest-cov>=4.0,<8.0",
    "ruff>=0.4.0,<1.0",
    "pre-commit>=3.7.0,<5.0",
]

[project.scripts]
ml-lab = "src.ml_lab.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["experiments", "registry"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
